<resources>
    <string name="app_name">BDU</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="meus_livros">Meus Livros</string>
    <string name="voltar">Voltar</string>
    <string name="livro_em_posse">Livro em posse:</string>
    <string name="titulo_do_livro">Titulo do livro</string>
    <string name="lista_de_desejos">Lista de Desejos</string>
    <string name="devolver_ate_dias_unifor">Devolver em ATÉ (DD) DIAS\nna biblioteca UNIFOR.</string>
    <string name="reportar_problema">Reportar Problema</string>
    <string name="historico_de_reservas">Histórico de reservas:</string>
    <string name="ver_tudo">Ver tudo</string>
    <string name="nome_do_livro_placeholder">(NOME DO LIVRO):</string>
    <string name="status_atrasado_dias">Status: ATRASADO há (Dias)</string>
    <string name="alugado_em_data">Alugado em: DD/MM/AAAA</string>
    <string name="status_devolvido_dias">Status: Devolvido há (Dias)</string>
    <string name="status_em_posse_dias">Status: Em posse há (Dias)</string>
    <string name="devolver_em_ate_dias">Devolver em ATÉ (Dias)</string>
    <string name="more_dots">...</string>
    <string name="fila">Fila</string>
    <string name="livro_usuario">Livro Usuário</string>
    <string name="home">Home</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="biblioteca_digital_unifor">Biblioteca Digital UNIFOR</string>
    <string name="time_placeholder">12:34 PM</string>
    <string name="notificacao_devolucao_amanha">Seu livro (nome) deve ser devolvido até amanhã na biblioteca Unifor.</string>
    <string name="biblioteca_digital">Biblioteca Digital</string>
    <string name="buscar">Buscar</string>
    <string name="lista_de_desejos_home">Lista de Desejos</string>
    <string name="livros_populares_curso">Livros populares com base em seu curso</string>
    <string name="livros_populares">Livros populares</string>
    <string name="orgulho_e_preconceito">Orgulho e Preconceito</string>
    <string name="jane_austen">Jane Austen</string>
    <string name="back">Voltar</string>
    <string name="inserir_nova_senha">Inserir nova senha</string>
    <string name="nova_senha_hint">Nova senha</string>
    <string name="confirmar_nova_senha_hint">Confirmar nova senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="desc_back">Voltar</string>
    <string name="title_report_problem">Reportar Problema</string>
    <string name="label_damage">Dano físico</string>
    <string name="hint_describe_problem">Descreva o problema aqui...</string>
    <string name="text_insert_images">Insira imagens do livro</string>
    <string name="desc_camera">Câmera</string>
    <string name="button_report_problem">REPORTAR PROBLEMA</string>
    <string name="report_problem_title">Reportar Problema</string>
    <string name="report_problem_question_detailed">Qual tipo de problema você teve com o livro (Nome do livro) ?</string>
    <string name="problem_damage_detailed">Dano/Rasura no livro</string>
    <string name="problem_content_detailed">Conteúdo indesejado presente no livro</string>
    <string name="problem_info_detailed">Livro com informação errada</string>
    <string name="problem_other_detailed">Outro</string>
    <string name="reportar_problema_pergunta">Qual o problema com o livro?</string>
    <string name="problema_danificado">Danificado</string>
    <string name="problema_conteudo">Conteúdo inadequado</string>
    <string name="problema_informacao">Informação errada</string>
    <string name="problema_outro">Outro</string>
    <string name="descreva_problema_hint">Descreva o problema aqui...</string>
    <string name="inserir_imagens">Inserir imagens do problema</string>
    <string name="enviar_relatorio">Enviar Relatório</string>

    <string name="informacoes_pessoais">Informações Pessoais</string>
    <string name="label_nome">Nome</string>
    <string name="label_email">E-mail</string>
    <string name="label_senha">Senha</string>
    <string name="label_cpf">CPF</string>
    <string name="label_telefone">Numero de telefone</string>
    <string name="label_estado">Estado</string>
    <string name="label_idade">Idade</string>
    <string name="label_curso">Curso</string>
    <string name="placeholder_nome">Nome do Usuário</string>
    <string name="placeholder_email">usuario@exemplo.com</string>
    <string name="placeholder_cpf">000.000.000-00</string>
    <string name="placeholder_telefone">(00) 00000-0000</string>
    <string name="placeholder_estado">Ceará</string>
    <string name="placeholder_idade">20 anos</string>
    <string name="placeholder_curso">Curso Selecionado</string>
    <string name="label_cadastro">Cadastro</string>
    <string name="hint_nome_completo">Nome Completo</string>
    <string name="hint_confirmar_email">Confirmar E-mail</string>
    <string name="hint_confirmar_senha">Confirmar Senha</string>
    <string name="hint_cidade">Cidade</string>
    <string name="label_senha_deve_ter">Senha deve ter:</string>
    <string name="senha_req_1">1- Ter no mínimo 8 caracteres</string>
    <string name="senha_req_2">2- Uma letra maiúscula</string>
    <string name="senha_req_3">3- Um número e um caractere especial</string>
    <string name="label_data_nascimento">Data de Nascimento</string>
    <string name="hint_data_nascimento">dd/mm/aaaa</string>
    <string name="label_concordo_termos">Concordo com os Termos e Condições</string>
    <string name="btn_finalizar_cadastro">Finalizar Cadastro</string>
    <string name="label_perfil">Perfil</string>
    <string name="label_mensagens">Mensagens</string>
    <string name="label_historico_livros">Histórico de livros</string>
    <string name="label_privacidade">Privacidade</string>
    <string name="label_preferencias_marketing">Preferências de Marketing</string>
    <string name="desc_preferencias_marketing">Autorize o recebimento de recomendações e ofertas personalizadas.</string>
    <string name="label_ativado">Ativado</string>
    <string name="label_dados_leitura">Dados de Leitura</string>
    <string name="desc_dados_leitura">Suas avaliações são usadas apenas para personalizar sua experiência.</string>
    <string name="label_privar_avaliacoes">Privar suas avaliações</string>
    <string name="label_gosto_literario">Gosto literário</string>
    <string name="desc_gosto_literario">Com base nos seus alugueis, será coletado informações e vai se ter o seu gosto por estilo de livro.</string>
    <string name="label_privar_gosto">Privar gosto para recomendações</string>
    <string name="btn_limpar_gosto">Limpar gosto literário</string>
    <string name="label_alterar_senha">Alterar Senha</string>
    <string name="label_pagar_juros">Pagar juros e multas</string>
    <string name="label_termos_condicoes">Termos e Condições</string>
    <string name="label_sair_conta">Sair da Conta</string>
    <string name="label_filtros">Filtros:</string>
    <string name="label_genero">Gênero</string>
    <string name="label_data_publicacao">Data de publicação</string>
    <string name="lista_de_espera">Lista de Espera</string>
    <string name="posicao_lista_espera">Posição na lista de espera: %s DE %s</string>
    <string name="previsao_disponibilidade">Previsão de disponibilidade: %s</string>
    <string name="livro_disponivel">Livro Disponível!</string>
    <string name="remover_da_lista">Remover da Lista</string>
    <string name="confirmar_reserva">Confirmar Reserva</string>
    <string name="desc_coracao">Coração</string>
    <string name="desc_remover">Remover</string>
    <string name="placeholder_posicao">X DE X</string>
    <string name="placeholder_data">DD/MM</string>
    <string name="placeholder_posicao_1">1 DE X</string>
    <string name="password_dots">****</string>
    <string name="desc_foto_perfil">Foto de perfil</string>
    <string name="desc_alterar_foto">Alterar foto</string>
    <string name="desc_ver_mais">Ver mais</string>
    <string name="placeholder_posicao_espera">Posição na lista de espera: X DE X</string>
    <string name="placeholder_previsao_disponibilidade">Previsão de disponibilidade: DD/MM</string>
    <string name="placeholder_posicao_espera_1">Posição na lista de espera: 1 DE X</string>
    <string name="chatbot">Chatbot</string>
    <string name="hint_digite_mensagem">Digite sua mensagem...</string>
</resources>